--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     ]
   },
   "dependencies": {
+    "@blitzjs/auth": "2.0.0-beta.26",
     "@blitzjs/next": "2.0.0-beta.26",
+    "@blitzjs/rpc": "2.0.0-beta.26",
     "blitz": "2.0.0-beta.26",
-    "next": "13.1",
+    "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ts-node": "10.9.1",
-    "@blitzjs/rpc": "2.0.0-beta.26",
-    "@blitzjs/auth": "2.0.0-beta.26"
+    "ripple-lib": "1.10.1",
+    "ts-node": "10.9.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
